ExtJS 5.1 added - Still issues with Theme, maybe Microloader?

--- a/extjs/app.html
+++ b/extjs/app.html
@@ -10,12 +10,13 @@
     <link rel="apple-touch-icon" href="resources/images/apple-touch-icon.png"/>
     <link rel="stylesheet" type="text/css" href="resources/Sencha-Examples/style.css"/>
 	<link rel="stylesheet" type="text/css" href="resources/ux/statusbar/css/statusbar.css" />
-	<script type="text/javascript" src="ext-all-debug.js"></script>
-    <!-- The line below must be kept intact for Sencha Command to build your application -->
+    <link rel="stylesheet" type="text/css" href="resources/panax/panax.css" />
+	<script type="text/javascript" src="ext-all-debug-5.0.1.js"></script>
+    <!-- <script type="text/javascript" src="ext-all-debug-5.1.js"></script> -->
+
     <script type="text/javascript">
 		Ext.Loader.setPath({
 			'Ext.ux': 'resources/ux'
-//			,'Ext.app': '../../../../../resources/extjs/ext-5.0.1/examples/portal/classes'
 			, 'Px': 'app'
 		});
     </script><script type="text/javascript">
@@ -38,7 +39,6 @@
 	<script type="text/javascript" src="overrides.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="bootstrap.js" id="microloader"></script>
-    <link rel="stylesheet" type="text/css" href="resources/panax/panax.css" />
 </head>
 <body></body>
 </html>
