--- a/extjs/app.html
+++ b/extjs/app.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Panax UI</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="google" content="notranslate" />
 
-    <title>Panax UI</title>
+    <link rel="stylesheet" type="text/css" href="../../resources/ext-5.1.0/build/packages/ext-theme-neptune/build/resources/ext-theme-neptune-all.css">
 
-    <link rel="apple-touch-icon" href="resources/images/apple-touch-icon.png"/>
+    <link rel="stylesheet" type="text/css" href="Theme/neptune-en/resources/Px-all.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="Theme/neptune-en/resources/Px-all_01.css" /> -->
+    <!-- <link rel="stylesheet" type="text/css" href="Theme/neptune-en/resources/Px-all_02.css" /> -->
+    <!-- <link rel="stylesheet" type="text/css" href="Custom/Styles/custom.css" /> -->
     <link rel="stylesheet" type="text/css" href="resources/Sencha-Examples/style.css"/>
-	<link rel="stylesheet" type="text/css" href="resources/ux/statusbar/css/statusbar.css" />
+    <link rel="stylesheet" type="text/css" href="resources/ux/statusbar/css/statusbar.css" />
     <link rel="stylesheet" type="text/css" href="resources/panax/panax.css" />
-	<script type="text/javascript" src="ext-all-debug-5.0.1.js"></script>
-    <!-- <script type="text/javascript" src="ext-all-debug-5.1.js"></script> -->
 
+    <!-- <script type="text/javascript" src="ext-all-debug-5.0.1.js"></script> -->
+    <script type="text/javascript" src="../../resources/ext-5.1.0/build/ext-all-debug.js"></script>
+    <script type="text/javascript" src="../../resources/ext-5.1.0/build/packages/ext-theme-neptune/build/ext-theme-neptune.js"></script>
     <script type="text/javascript">
 		Ext.Loader.setPath({
-			'Ext.ux': 'resources/ux'
-			, 'Px': 'app'
+			'Ext.ux': '../../resources/ext-5.1.0/examples/ux'
+			//, 'Px': 'app'
 		});
-    </script><script type="text/javascript">
+    </script>
+    <!-- 
+    <script type="text/javascript">
         var Ext = Ext || {};
         Ext.repoDevMode = true;
         Ext.beforeLoad = function(tags){
@@ -34,11 +41,12 @@
             Ext.microloaderTags = tags;
         };
     </script>
+     -->
 	<script type="text/javascript" src="scripts/md5.js"></script>
 	<script type="text/javascript" src="components.js"></script>
 	<script type="text/javascript" src="overrides.js"></script>
     <script type="text/javascript" src="app.js"></script>
-    <script type="text/javascript" src="bootstrap.js" id="microloader"></script>
+    <!-- <script type="text/javascript" src="bootstrap.js" id="microloader"></script> -->
 </head>
 <body></body>
 </html>
