--- a/extjs/app.html
+++ b/extjs/app.html
@@ -6,18 +6,24 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="google" content="notranslate" />
 
-    <link rel="stylesheet" type="text/css" href="../../resources/ext-5.1.0/build/packages/ext-theme-neptune/build/resources/ext-theme-neptune-all.css">
+    <link rel="stylesheet" type="text/css" href="../../resources/ext-5.1.0/build/packages/ext-theme-neptune/build/resources/ext-theme-neptune-all-debug.css">
+    <link rel="stylesheet" type="text/css" href="../../resources/ext-5.1.0/build/packages/ext-ux/build/neptune/resources/ext-ux-all-debug.css">
 
     <link rel="stylesheet" type="text/css" href="Theme/neptune-en/resources/Px-all.css" />
-    <!-- <link rel="stylesheet" type="text/css" href="Theme/neptune-en/resources/Px-all_01.css" /> -->
-    <!-- <link rel="stylesheet" type="text/css" href="Theme/neptune-en/resources/Px-all_02.css" /> -->
-    <!-- <link rel="stylesheet" type="text/css" href="Custom/Styles/custom.css" /> -->
     <link rel="stylesheet" type="text/css" href="resources/Sencha-Examples/style.css"/>
-    <link rel="stylesheet" type="text/css" href="resources/ux/statusbar/css/statusbar.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="Custom/Styles/custom.css" /> -->
+    <!-- <link rel="stylesheet" type="text/css" href="resources/ux/statusbar/css/statusbar.css" /> -->
     <link rel="stylesheet" type="text/css" href="resources/panax/panax.css" />
 
     <script type="text/javascript" src="../../resources/ext-5.1.0/build/ext-all-debug.js"></script>
-    <script type="text/javascript" src="../../resources/ext-5.1.0/build/packages/ext-theme-neptune/build/ext-theme-neptune.js"></script>
+    <script type="text/javascript" src="../../resources/ext-5.1.0/build/packages/ext-theme-neptune/build/ext-theme-neptune-debug.js"></script>
+    <script type="text/javascript" src="../../resources/ext-5.1.0/build/packages/ext-ux/build/ext-ux-debug.js"></script>
+
+    <script type="text/javascript">
+        Ext.Loader.setPath({
+            'Ext.ux': '../../resources/ext-5.1.0/examples/ux'
+        });
+    </script>
     <!-- 
     <script type="text/javascript">
         var Ext = Ext || {};
@@ -41,5 +47,6 @@
     <script type="text/javascript" src="app.js"></script>
     <!-- <script type="text/javascript" src="bootstrap.js" id="microloader"></script> -->
 </head>
-<body></body>
+    <body>
+    </body>
 </html>
