--- a/extjs/app.html
+++ b/extjs/app.html
@@ -21,7 +21,8 @@
 
     <script type="text/javascript">
         Ext.Loader.setPath({
-            'Ext.ux': '../../resources/ext-5.1.0/examples/ux'
+            'Ext.ux': '../../resources/ext-5.1.0/examples/ux',
+            'Ext.ux.form.field': '../../resources/DateTime/source/form/field'
         });
     </script>
     <!-- 
