DateTime Plugin update: 	- * Plugin as Git SUBMODULE under "lib/" 	- Render DataTime Data Type 	- Fixed model.xsl date format 	- JSON.xsl now serves date strings

--- a/extjs/app.html
+++ b/extjs/app.html
@@ -22,7 +22,7 @@
     <script type="text/javascript">
         Ext.Loader.setPath({
             'Ext.ux': '../../resources/ext-5.1.0/examples/ux',
-            'Ext.ux.form.field': '../../resources/DateTime/source/form/field'
+            'Ext.ux.form.field': 'lib/DateTime/source/form/field'
         });
     </script>
     <!-- 
